--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,7 @@ layout: default
 <div class="about-col-wrapper">
   <div class="about-col about-col-1">
 
-    <img class="user-picture" src="/assets/img/srapp.jpg" alt="{{ site.author }}">
+    < src="/assets/img/srapp.jpg" alt="{{ site.author }}">
 
     <div class="author-description">
       {% include author.html %}
