--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -36,7 +36,9 @@ layout: default
     </ul>
 
   </div>
-  <article class="about-col about-col-2" itemscope itemtype="http://schema.org/BlogPosting">
+  <article class="about-col about-col-2">
+    <!-- <h1>{{ page.title }}</h1> -->
+
     <div class="post-content" itemprop="articleBody">
       {{ content }}
     </div>
