--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -18,11 +18,11 @@ layout: default
       </li>
       {% endif %}
       
-      <!-- {% if site.curriculum.url %}
+      {% if site.curriculum.url %}
       <li>
         {% include _icons/file.html curriculum=site.curriculum %}
       </li>
-      {% endif %} -->
+      {% endif %}
     </ul>
     
     {% include contactlist.html %}
