--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,9 @@ layout: default
 <div class="about-col-wrapper">
   <div class="about-col about-col-1">
 
+    <div
     <img src="/assets/img/srapp.jpg" alt="{{ site.author }}">
+     <div
 
     <div class="author-description">
       {% include author.html %}
