--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,8 +4,10 @@ layout: default
 
 <div class="about-col-wrapper">
   <div class="about-col about-col-1">
-
+</ul>
     <img src="/assets/img/srapp.jpg" alt="{{ site.author }}">
+<br /> 
+<br /> 
 
     <div class="author-description">
       {% include author.html %}
@@ -41,6 +43,6 @@ layout: default
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
-    </div>
+    <div>
   </article>
 </div>
