--- a/assets/main.scss
+++ b/assets/main.scss
@@ -20,7 +20,7 @@ $spacing-unit:     50px;
 
 $text-color:       #111;
 $background-color: #fffef2;
-$brand-color:      #C5AC68;
+$brand-color:      #489AE5;
 
 $grey-color:       #3F3F3F;
 $grey-color-light: lighten($grey-color, 50%);
