--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,8 +19,8 @@ $alt-font-weight: bold;
 $spacing-unit:     50px;
 
 $text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #9c1705;
+$background-color: #fffef2;
+$brand-color:      #9e1703;
 
 $grey-color:       #3F3F3F;
 $grey-color-light: lighten($grey-color, 50%);
