--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163872740-2"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-QYSW672G77"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
 
-    gtag('config', 'UA-163872740-2');
+ 	 gtag('config', 'G-QYSW672G77');
   </script>
 
   <script>
