--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,7 +7,7 @@
 
 // Our variables
 // $base-font-family: "Open Sans", sans-serif;
-$base-font-family: "Raleway", Verdana, sans-serif;
+$base-font-family: "Cormorant Garamond", Georgia, serif;
 $base-font-size:   20px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.95;
@@ -20,7 +20,7 @@ $spacing-unit:     50px;
 
 $text-color:       #111;
 $background-color: #fffef2;
-$brand-color:      #9e1703;
+$brand-color:      #d61b02;
 
 $grey-color:       #3F3F3F;
 $grey-color-light: lighten($grey-color, 50%);
