--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,11 +9,11 @@
 // $base-font-family: "Open Sans", sans-serif;
 $base-font-family: "Cormorant Garamond", Georgia, serif;
 $base-font-size:   20px;
-$base-font-weight: 400;
+$base-font-weight: 300;
 $small-font-size:  $base-font-size * 0.95;
 $base-line-height: 1.5;
 
-$alt-font-family: "Raleway", Verdana, sans-serif;
+$alt-font-family: "Cormorant Garamond", Georgia, serif;
 $alt-font-weight: bold;
 
 $spacing-unit:     50px;
